	* Fix bug requête invalid après suppression d'une image dans la micro galerie
	* Correction orthographique dans la validation du plugin contact
	* Ajout du système pour afficher un template avec fetch dans les plugins
	* Correction de la longueur des champs de base de données (varchar) lors de l'installation (catalogue et cms)
	
Stable 2.3.31
	* Suppression du système de licence pour compatibilité encodeur.
	* Ajout du plugin contact dans les plugins par défaut.
	* Suppression des fichiers non utilisé 
		- dossier js dans app/backend
		- dossier js dans app/frontend
		- dossier plugins dans app/backend
		- dossier plugins dans app/frontend
		- jquery tipsy
	
Stable 2.3.3
	* Modification des URLS pour les pages CMS
		- Ajout de l'identifiant numérique de la page
		- Ajout de l'identifiant numérique de la catégorie
		- Correction du htaccess pour la nouvelle règle des pages CMS
	* Ajout de la prévisualisation à partir des liens en plus de la loupe dans l'administration
	* Ajout du système pour l'encodage de la licence (install)
		- Ajout de la notification des chmods pour le dossier app/config (création du fichier config.php) 
	* Correction du système de sitemap pour inclure les pages CMS avec la nouvelle règle de réécriture
	* Ajout du système de ping du sitemap avec choix de la compression
		- Aucune compression
		- Compression GZ
	* Patch valide url dans magix cjquery (utilisation regex à la place de filter_var bug php 5.2.13)
	* Modification des widgets par défaut
		- widget_simple_sidebar_cms => Correction des URL avec la nouvelle règle de réécriture.
	* Correction du système de sitemap pour les plugins
		- Suppression de la table des sitemaps supplémetaire 
		- Remplacement par un scanne de dossier et analyse de la fonction createSitemap
	* Fix bug de la portée des fonctions de la classe sitemap + plugins
	* Suppression de la table sitemap dans l'installation de magix cms
	
Stable 2.3.2