@@ -74,7 +74,10 @@
 									<td class="label"><label for="metatitle" class="inlinelabel">Title :</label></td>
 								</tr>
 								<tr>
-									<td><textarea id="metatitle" name="metatitle" class="ui-input ui-widget-content ui-corner-all" cols="70" rows="2">{$metatitle}</textarea></td>
+									<td>
+										<textarea id="metatitle" name="metatitle" class="ui-input ui-widget-content ui-corner-all" cols="70" rows="2">{$metatitle}</textarea>
+										<div id="charactersLeftT" class="wrap">150</div>
+									</td>
 									<td style="width:150px;" class="errorInput"></td>
 								</tr>
 								<tr>
@@ -84,7 +87,10 @@
 									<td class="label"><label for="metadescription" class="inlinelabel">Description :</label></td>
 								</tr>
 								<tr>
-									<td><textarea name="metadescription" id="metadescription" class="ui-input ui-widget-content ui-corner-all" cols="70" rows="2">{$metadescription}</textarea></td>
+									<td>
+										<textarea name="metadescription" id="metadescription" class="ui-input ui-widget-content ui-corner-all" cols="70" rows="2">{$metadescription}</textarea>
+										<div id="charactersLeftD" class="wrap">180</div>
+									</td>
 									<td style="width:150px;" class="errorInput"></td>
 								</tr>
 								<tr>
